--- a/admin/src/css/common.css
+++ b/admin/src/css/common.css
@@ -101,3 +101,35 @@ q:before, q:after, blockquote:before, blockquote:after {
 a{
     text-decoration:none;
 }
+
+
+.avatar-uploader .el-upload {
+    border: 1px dashed #d9d9d9;
+    border-radius: 6px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+}
+.avatar-uploader .el-upload:hover {
+    border-color: #409EFF;
+}
+.avatar-uploader-icon {
+    font-size: 28px;
+    color: #8c939d;
+    width: 128px;
+    height: 128px;
+    line-height: 128px !important;
+    text-align: center;
+}
+.avatar {
+    width: 178px;
+    height: 178px;
+    display: block;
+}
+/*.box > /deep/ .el-dialog__body {*/
+/*    padding: 0;*/
+/*}*/
+
+/*.box > /deep/ .el-dialog__footer {*/
+/*    padding: 0;*/
+/*}*/
